--- a/views/pages/main.hbs
+++ b/views/pages/main.hbs
@@ -30,7 +30,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Popular</a>
+            <a class="nav-link" href="#">Popular
+              <span class="sr-only">(current)</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Register</a>
@@ -39,9 +41,7 @@
             <a class="nav-link" href="#">My Timeline</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Gallery
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="#">My Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
@@ -56,8 +56,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Artist Name's Profile</h1>
-      <p class="lead">Artist chosen description</p>
+      <h1 class="display-3">Popular</h1>
+      <p class="lead">The most liked pictures in the last 24 hours!</p>
     </header>
 
     <!-- Page Features -->
@@ -71,7 +71,7 @@
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
