--- a/views/pages/homepage.hbs
+++ b/views/pages/homepage.hbs
@@ -30,21 +30,21 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Popular
+            <a class="nav-link" href="./">Popular
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="./Register">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Timeline</a>
+            <a class="nav-link" href="./MyTimeline">My Timeline</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Gallery</a>
+            <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="./Login">Login</a>
           </li>
         </ul>
       </div>
