--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -117,7 +117,7 @@
 
     </div>
     <!-- /.row -->
-
+    <a href="./Image" class="btn btn-primary">Upload Images</a>
   </div>
   <!-- /.container -->
 
