--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -1,4 +1,52 @@
-<main role="main" class="container">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Artist Social Media</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./">Popular</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./MyTimeline">My Timeline</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="./MyGallery">My Gallery
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Login">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<form class="form-signin" method="POST" action="/login">
+  <div class="text-center mb-4">
+    <h1 class="h3 mb-5 font-weight-normal">HHH</h1>
+    <form method="POST" action="/images" enctype="multipart/form-data">
+        <label>Imagen: </label>
+        <input type="file" name="theImage">
+        <input type="submit" value="Upload">
+      </form>
+</form>
+
+
+
+
+
+
+
+
+
+<!--div class="container">
   <div class="starter-template">
     
   <div class="row">
@@ -10,4 +58,4 @@
       </form>
     </div>
   </div>
-</main>
+</div-->
