--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-<form class="form-signin" method="POST" action="/login">
+<form class="form-signin" method="POST" action="/images">
   <div class="text-center mb-4">
     <h1 class="h3 mb-5 font-weight-normal">HHH</h1>
     <form method="POST" action="/images" enctype="multipart/form-data">
@@ -37,6 +37,8 @@
         <input type="submit" value="Upload">
       </form>
 </form>
+
+
 
 
 
