--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -28,14 +28,12 @@
     </div>
   </nav>
 
-<form class="form-signin" method="POST" action="/images">
+<form class="form-signin" method="POST" action="/images" enctype="multipart/form-data">
   <div class="text-center mb-4">
     <h1 class="h3 mb-5 font-weight-normal">HHH</h1>
-    <form method="POST" action="/images" enctype="multipart/form-data">
         <label>Imagen: </label>
         <input type="file" name="theImage">
         <input type="submit" value="Upload">
-      </form>
 </form>
 
 
