see images and create databse for images

--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -65,7 +65,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="http://localhost:3000/images/Cleric-Light.jpg" alt="" >
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
@@ -78,7 +78,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="http://localhost:3000/images/Red_Panda.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
@@ -91,7 +91,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="http://localhost:3000/images/204869.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
@@ -104,7 +104,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="http://localhost:3000/images/pexels-photo-2265247.jpeg" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
@@ -122,11 +122,13 @@
   <!-- /.container -->
 
     <!-- /.container -->
-  </footer>
+    
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
 
 </body>
 
