--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -35,7 +35,15 @@
         <input type="file" name="theImage">
         <input type="submit" value="Upload">
 </form>
-
+<form class="form-signin" method="POST" action="" enctype="multipart/form-data">
+  <div class="text-center mb-4">
+    
+        <label>Title: </label>
+        <input type="text" name="title">
+        <label>Description: </label>
+        <input type="text" name="desciption">
+        <input type="submit" value="Upload">
+</form>
 
 
 
