coneccion base de datos img

--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -33,12 +33,12 @@
     <h1 class="h3 mb-5 font-weight-normal">HHH</h1>
         
         <label>Title: </label>
-        <input type="text" name="title">
+        <input type="text" name="title" >
         
         <label>Description: </label>
-        <input type="text" name="desciption">
+        <input type="text" name="desciption" >
 
-        <label>Imagen: </label>
+        <label>Image: </label>
         <input type="file" name="theImage">
         <input type="submit" value="Upload">
 </form>
