login session cambia ruta. botones cambian si hay acceso

--- a/views/pages/homepageunlogged.hbs
+++ b/views/pages/homepageunlogged.hbs
@@ -29,24 +29,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./">Popular</a>
-          </li>
-          <!-- change register for user name? -->
-          <li class="nav-item">
-            <a class="nav-link" href="./Register">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./MyTimeline">My Timeline</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./MyGallery">My Gallery
+            <a class="nav-link" href="./">Popular
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <!--todo logout -->
-            <a class="nav-link" href="./Login">Logout</a>
+            <a class="nav-link" href="./Register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Login">Login</a>
           </li>
         </ul>
       </div>
@@ -58,8 +50,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Artist Name's Profile</h1>
-      <p class="lead">Artist chosen description</p>
+      <h1 class="display-3">Popular</h1>
+      <p class="lead">The most liked pictures in the last 24 hours!</p>
     </header>
 
     <!-- Page Features -->
@@ -67,70 +59,68 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/Cleric-Light.jpg" alt="" >
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/Red_Panda.jpg" alt="">
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/204869.jpg" alt="">
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/pexels-photo-2265247.jpeg" alt="">
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
           <div class="card-body">
             <h4 class="card-title">Artwork Title</h4>
             <p class="card-text">Artwork Description</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+            <a href="#" class="btn btn-primary">Artist Username</a>
           </div>
         </div>
       </div>
 
     </div>
     <!-- /.row -->
-    <a href="./Image" class="btn btn-primary">Upload Images</a>
+
   </div>
   <!-- /.container -->
 
     <!-- /.container -->
-    
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-
 
 </body>
 
