--- a/views/pages/homepage.hbs
+++ b/views/pages/homepage.hbs
@@ -35,16 +35,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Register">Register</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="./MyTimeline">My Timeline</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Login">Login</a>
+            <a class="nav-link" href="./">{{user}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Logout">Logout</a>
           </li>
         </ul>
       </div>
