--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -29,24 +29,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./">Popular</a>
-          </li>
-          <!-- change register for user name? -->
-          <li class="nav-item">
-            <a class="nav-link" href="./Register">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./MyTimeline">My Timeline</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./MyGallery">My Gallery
+            <a class="nav-link" href="./">Popular
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <!--todo logout -->
-            <a class="nav-link" href="./Login">Logout</a>
+            <a class="nav-link" href="./MyTimeline">My Timeline</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./MyGallery">My Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./">{{user}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Logout">Logout</a>
           </li>
         </ul>
       </div>
@@ -58,7 +56,7 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Artist Name's Profile</h1>
+      <h1 class="display-3">{{username}}'s Profile</h1>
       <p class="lead">Artist chosen description</p>
     </header>
 
