--- a/views/pages/timeline.hbs
+++ b/views/pages/timeline.hbs
@@ -18,7 +18,7 @@
 
 </head>
 <body>
- <!-- Navigation -->
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Artist Social Media</a>
@@ -27,21 +27,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./">Popular</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Register">Register</a>
-          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./MyTimeline">My Timeline
-              <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./">Popular
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./MyTimeline">My Timeline</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Login">Login</a>
+            <a class="nav-link" href="./">{{user}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Logout">Logout</a>
           </li>
         </ul>
       </div>
