--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -64,58 +64,25 @@
 
     <!-- Page Features -->
     <div class="row text-center">
+      
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/Cleric-Light.jpg" alt="" >
-          <div class="card-body">
-            <h4 class="card-title">Artwork Title</h4>
-            <p class="card-text">Artwork Description</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
+
+      {{#each images}}
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="{{this.imgUrl}}" alt="">
+            <div class="card-body">
+              <h4 class="card-title">{{this.title}}</h4>
+              <p class="card-text">{{this.description}}</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">{{this.user}}</a>
+            </div>
           </div>
         </div>
-      </div>
+      {{/each}}
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/Red_Panda.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Artwork Title</h4>
-            <p class="card-text">Artwork Description</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/204869.jpg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Artwork Title</h4>
-            <p class="card-text">Artwork Description</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://localhost:3000/images/pexels-photo-2265247.jpeg" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Artwork Title</h4>
-            <p class="card-text">Artwork Description</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Detailed View</a>
-          </div>
-        </div>
-      </div>
+      
 
     </div>
     <!-- /.row -->
