--- a/views/pages/timeline.hbs
+++ b/views/pages/timeline.hbs
@@ -48,6 +48,40 @@
     </div>
   </nav>
 
+    <div class="container">
+
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+      <h1 class="display-3">My TimeLine</h1>
+      <p class="lead"></p>
+    </header>
+
+    <!-- Page Features -->
+    <div class="row text-center">
+
+      {{#each images}}
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card h-100">
+            <img class="card-img-top" src="{{this.imgUrl}}" alt="">
+            <div class="card-body">
+              <h4 class="card-title">{{this.title}}</h4>
+              <p class="card-text">{{this.description}}</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">{{this.user}}</a>
+            </div>
+          </div>
+        </div>
+      {{/each}}
+
+      
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
 </body>
 
 </html>
