--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -7,21 +7,21 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./">Popular</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Register">Register</a>
+            <a class="nav-link" href="./">Popular
+              <span class="sr-only">(current)</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./MyTimeline">My Timeline</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./MyGallery">My Gallery
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Login">Login</a>
+            <a class="nav-link" href="./">{{user}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Logout">Logout</a>
           </li>
         </ul>
       </div>
