--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,12 +1,12 @@
-<form class="form-signin" method="POST" action="/login">
+<style>
+  form{
+    box-shadow: 15px -12px  #dc3545;
+  }
+</style>
+<form class="form-signin border border-dark rounded p-5" method="POST" action="/login">
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-    <p>
-      Template source:
-        <a href="https://getbootstrap.com/docs/4.0/examples/" target="_blank">
-          https://getbootstrap.com/docs/4.0/examples/
-        </a>
-    </p>
+    
     <p>
       You don't have an account? <a href="/register">Register</a>
     </p>
