--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,12 +1,13 @@
-<form class="form-signin" method="POST" action="/register">
+<style>
+  body{}
+  form{
+    box-shadow: 15px -12px #dc3545;
+  }
+</style>
+<form class="form-signin border border-dark rounded p-5" method="POST" action="/register">
   <div class="text-center mb-4">
     <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-    <p>
-      Template source:
-        <a href="https://getbootstrap.com/docs/4.0/examples/" target="_blank">
-          https://getbootstrap.com/docs/4.0/examples/
-        </a>
-    </p>
+    
     <p>
       Already have an account? <a href="/login">Login</a>
     </p>
