--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Artist Social Media</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,6 +58,9 @@
     <header class="jumbotron my-4">
       <h1 class="display-3">{{username}}'s Profile</h1>
       <p class="lead">Artist chosen description</p>
+      <a href="" class="btn btn-danger">My Follows</a>
+      <a href="" class="btn btn-danger">My Followers</a>
+      <a href="./Image" class="btn btn-danger">Upload Images</a>
     </header>
 
     <!-- Page Features -->
@@ -74,7 +77,7 @@
               <p class="card-text">{{this.description}}</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">{{this.user}}</a>
+              <a href="#" class="btn btn-danger">{{this.user}}</a>
             </div>
           </div>
         </div>
@@ -82,10 +85,7 @@
 
       
 
-    </div>
-    <!-- /.row -->
-    <a href="./Image" class="btn btn-primary">Upload Images</a>
-  </div>
+    
   <!-- /.container -->
 
     <!-- /.container -->
