--- a/views/pages/timeline.hbs
+++ b/views/pages/timeline.hbs
@@ -19,7 +19,7 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Artist Social Media</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
               <p class="card-text">{{this.description}}</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">{{this.user}}</a>
+              <a href="#" class="btn btn-danger">{{this.user}}</a>
             </div>
           </div>
         </div>
