--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -28,6 +28,6 @@
     </label>
   </div>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+  <button class="btn btn-lg btn-danger btn-block" type="submit">Login</button>
   <p class="mt-5 mb-3 text-muted text-center">© {{year}}</p>
 </form>
