--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,5 +1,5 @@
 <style>
-  body{}
+ 
   form{
     box-shadow: 15px -12px #dc3545;
   }
@@ -44,6 +44,6 @@
     <label for="inputConfirmPassword">Confirm password</label>
   </div>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button class="btn btn-lg btn-danger btn-block" type="submit">Sign in</button>
   <p class="mt-5 mb-3 text-muted text-center">© {{year}}</p>
 </form>
