--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -1,3 +1,22 @@
+<style>
+  form{
+    width:50%;
+    margin-top:12%;
+    margin-left:15%;
+    text-align:center;
+    box-shadow: 15px -12px #dc3545;
+    
+  }
+  form label{
+    color:black;
+    font-weight: bold;
+    display: block;
+  }
+  form input{
+    margin-bottom: 10px;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Artist Social Media</a>
@@ -28,41 +47,18 @@
     </div>
   </nav>
 
-<form class="form-signin" method="POST" action="/images" enctype="multipart/form-data">
+<form class="form-signin border border-dark rounded p-4" method="POST" action="/images" enctype="multipart/form-data">
   <div class="text-center mb-4">
-    <h1 class="h3 mb-5 font-weight-normal">HHH</h1>
-        
-        <label>Title: </label>
-        <input type="text" name="title" >
-        
-        <label>Description: </label>
-        <input type="text" name="desciption" >
-
-        <label>Image: </label>
-        <input type="file" name="theImage">
-        <input type="submit" value="Upload">
-</form>
-
-
-
-
-
-
-
-
-
-
-
-<!--div class="container">
-  <div class="starter-template">
-    
-  <div class="row">
-    <div class="col">
-      <form method="POST" action="/images" enctype="multipart/form-data">
-        <label>Imagen: </label>
-        <input type="file" name="theImage">
-        <input type="submit" value="Upload">
-      </form>
-    </div>
+    <h1 class="h3 mb-3 font-weight-normal">Upload Image</h1>
   </div>
-</div-->
+   
+  <label>Title: </label>
+  <input type="text" name="title">
+  
+  <label>Description: </label>
+  <input type="text" name="desciption">
+
+  <label>Image: </label>
+  <input type="file" name="theImage">
+  <input type="submit" value="Upload" class="btn btn-danger btn-block">
+</form>
