--- a/views/pages/homepage.hbs
+++ b/views/pages/homepage.hbs
@@ -57,7 +57,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       <h1 class="display-3">Popular</h1>
-      <p class="lead">The most liked pictures in the last 24 hours!</p>
+      <p class="lead">The most liked pictures of the website!</p>
     </header>
 
     <!-- Page Features -->
