--- a/views/pages/gallery.hbs
+++ b/views/pages/gallery.hbs
@@ -57,7 +57,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       <h1 class="display-3">{{username}}'s Profile</h1>
-      <p class="lead">Artist chosen description</p>
+      <p class="lead"></p>
       <a href="" class="btn btn-danger">My Follows</a>
       <a href="" class="btn btn-danger">My Followers</a>
       <a href="./Image" class="btn btn-danger">Upload Images</a>
