--- a/views/pages/uploadImg.hbs
+++ b/views/pages/uploadImg.hbs
@@ -56,7 +56,7 @@
   <input type="text" name="title">
   
   <label>Description: </label>
-  <input type="text" name="desciption">
+  <textarea type="text" name="description" rows="3" cols="50"></textarea>
 
   <label>Image: </label>
   <input type="file" name="theImage">
