--- a/views/pages/mygallery.hbs
+++ b/views/pages/mygallery.hbs
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Artist Social Media</a>
+      <a class="navbar-brand" href="./">Artist Social Media</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,7 +41,7 @@
             <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./">{{user}}</a>
+            <a class="nav-link" href="./">{{username}}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Logout">Logout</a>
@@ -56,8 +56,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">{{username}}'s Profile</h1>
-      <p class="lead">Artist chosen description</p>
+      <h1 class="display-3">My Gallery</h1>
+      <p class="lead">{{username}}</p>
       <a href="" class="btn btn-danger">My Follows</a>
       <a href="" class="btn btn-danger">My Followers</a>
       <a href="./Image" class="btn btn-danger">Upload Images</a>
@@ -92,6 +92,10 @@
     
 
   <!-- Bootstrap core JavaScript -->
+  <script>
+    console.log("{{username}}");
+
+  </script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
