--- a/views/pages/profile.hbs
+++ b/views/pages/profile.hbs
@@ -23,13 +23,13 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="./">Artist Social Media</a>
+      <a class="navbar-brand" href="../">Artist Social Media</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul id = "navigation_bar" class="navbar-nav ml-auto">
-          <li class="nav-item active">
+        <ul id="navigation_bar" class="navbar-nav ml-auto">
+          <li class="nav-item">
             <a class="nav-link" href="./">Popular
               <span class="sr-only">(current)</span>
             </a>
@@ -44,12 +44,15 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Popular</h1>
-      <p class="lead">The most liked pictures in the website!</p>
+      <h1 class="display-3">{{profilename}}'s Profile</h1>
+      <p class="lead">Artist chosen description</p>
+      <a href="" class="btn btn-danger">Follow this user</a>
     </header>
 
     <!-- Page Features -->
     <div class="row text-center">
+      
+
 
       {{#each images}}
         <div class="col-lg-3 col-md-6 mb-4">
@@ -60,7 +63,7 @@
               <p class="card-text">{{this.description}}</p>
             </div>
             <div class="card-footer">
-              <a href="./Profile/{{this.user}}" class="btn btn-danger">{{this.user}}</a>
+              <a href="../Profile/{{this.user}}" class="btn btn-danger">{{this.user}}</a>
             </div>
           </div>
         </div>
@@ -68,15 +71,10 @@
 
       
 
-    </div>
-    <!-- /.row -->
-
-  </div>
+    
   <!-- /.container -->
 
-   
-  </footer>
-
+    <!-- /.container -->
   <script>
     //get navigation bar
     var navigation_bar = document.getElementById("navigation_bar");
@@ -88,7 +86,7 @@
       timelineli.className = "nav-item";
       var timelinea = document.createElement("a");
       timelinea.className = "nav-link";
-      timelinea.href = "./MyTimeline";
+      timelinea.href = "../MyTimeline";
       timelinea.innerHTML = "My Timeline"
       timelineli.appendChild(timelinea);
       navigation_bar.appendChild(timelineli);
@@ -98,7 +96,7 @@
       profileli.className = "nav-item";
       var profilea = document.createElement("a");
       profilea.className = "nav-link";
-      profilea.href = "./MyGallery";
+      profilea.href = "../MyGallery";
       profilea.innerHTML = "My profile"
       profileli.appendChild(profilea);
       navigation_bar.appendChild(profileli);
@@ -108,7 +106,7 @@
       userli.className = "nav-item";
       var usera = document.createElement("a");
       usera.className = "nav-link";
-      usera.href = "./MyGallery";
+      usera.href = "../MyGallery";
       usera.innerHTML = "{{username}}"
       userli.appendChild(usera);
       navigation_bar.appendChild(userli);
@@ -118,7 +116,7 @@
       logoutli.className = "nav-item";
       var logouta = document.createElement("a");
       logouta.className = "nav-link";
-      logouta.href = "./Logout";
+      logouta.href = "../Logout";
       logouta.innerHTML = "Logout"
       logoutli.appendChild(logouta);
       navigation_bar.appendChild(logoutli);      
@@ -133,7 +131,7 @@
       registerli.className = "nav-item";
       var registera = document.createElement("a");
       registera.className = "nav-link";
-      registera.href = "./Register";
+      registera.href = "../Register";
       registera.innerHTML = "Register"
       registerli.appendChild(registera);
       navigation_bar.appendChild(registerli);    
@@ -143,17 +141,19 @@
       loginli.className = "nav-item";
       var logina = document.createElement("a");
       logina.className = "nav-link";
-      logina.href = "./Login";
+      logina.href = "../Login";
       logina.innerHTML = "Login"
       loginli.appendChild(logina);
       navigation_bar.appendChild(loginli);              
     }
     
-  </script>
+  </script>   
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
 
 </body>
 
