--- a/views/pages/homepage.hbs
+++ b/views/pages/homepage.hbs
@@ -8,7 +8,7 @@
   <meta name="description" content="Entrega Parcial 1">
   <meta name="author" content="">
 
-  <title>Artist Social Media</title>
+  <title>CapArt</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="./">Artist Social Media</a>
+      <a class="navbar-brand" href="./">CapArt</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
