--- a/views/pages/homepage.hbs
+++ b/views/pages/homepage.hbs
@@ -99,7 +99,7 @@
       var profilea = document.createElement("a");
       profilea.className = "nav-link";
       profilea.href = "./MyGallery";
-      profilea.innerHTML = "My profile"
+      profilea.innerHTML = "My Gallery"
       profileli.appendChild(profilea);
       navigation_bar.appendChild(profileli);
 
