--- a/views/pages/myfollows.hbs
+++ b/views/pages/myfollows.hbs
@@ -48,7 +48,7 @@
             <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./">{{user}}</a>
+            <a class="nav-link" href="./">{{username}}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Logout">Logout</a>
