--- a/views/pages/mygallery.hbs
+++ b/views/pages/mygallery.hbs
@@ -41,7 +41,7 @@
             <a class="nav-link" href="./MyGallery">My Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./">{{username}}</a>
+            <a class="nav-link" href="./MyGallery">{{username}}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Logout">Logout</a>
